--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "nodemailer": "^6.4.6",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "objection": "^2.1.3",
     "pg": "^8.1.0"
   }
